--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A camp ground review site that will help you find he best camp for you!",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "Dustin Cheung",
   "license": "ISC",
